--- a/.github/Workflows/1stAction.yml
+++ b/.github/Workflows/1stAction.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix: 
-      python-version: [3.8, 3.5]
+        python-version: [3.8, 3.9]
 
     steps:
       - uses: actions/checkout@v3
@@ -20,7 +20,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name Install dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pytest
