--- a/.github/workflows/node_app_actions.yml
+++ b/.github/workflows/node_app_actions.yml
@@ -4,7 +4,7 @@
 
 name: Node JS trigger
 
-on: [push, commit]
+on: [push]
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['14.10']
+        node-version: ['17.9.0']
 
     steps:
     - uses: actions/checkout@v4
